@@ -20,7 +20,7 @@ provider-name="Gujal">
 </addon>
 
 <addon id="plugin.video.deccandelight"
-version="1.1.0"
+version="1.1.1"
 name="Deccan Delight"
 provider-name="Gujal">
 <requires>
