@@ -18,6 +18,7 @@
         <setting id="hlinks" type="bool" label="Hindi Links 4 U [COLOR magenta](Needs TLS1.2)[/COLOR]" default="false"/>
 		<setting id="desit" type="bool" label="Desi Tashan" default="true"/>
         <setting id="yodesi" type="bool" label="Yo Desi" default="true"/>
+		<setting id="gmala" type="bool" label="Hindi Geetmala" default="true"/>
     </category>
     <category label="Multi Language Scrapers">
 		<setting id="aindia" type="bool" label="Abroad India" default="true"/>
